Added spartan Added header

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,5 +4,6 @@
   <nav>
     <a routerLink="/npc">Go to NPC Tool</a>
     <a routerLink="/spells">Go to Spells Tool</a>
+    <button hlmBtn variant="outline">Test</button>
   </nav>
 </div>
