--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="flex flex-row gap-3 items-center">
-    <button hlmBtn variant="ghost">Quest</button>
+    <button hlmBtn variant="ghost" routerLink="quest">Quest</button>
     <button hlmBtn variant="ghost">Item</button>
     <button hlmBtn variant="ghost">NPC</button>
   </div>
