converted input to use HlmDirective Added strict form type to questform Made quest output fill out rudimentary code

--- a/src/app/features/quest/components/quest-form/quest-form.component.html
+++ b/src/app/features/quest/components/quest-form/quest-form.component.html
@@ -1,6 +1,5 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <app-input formControlName="name" label="Name"></app-input>
-  <button type="submit" [disabled]="form.invalid">Submit</button>
+<form [formGroup]="form">
+  <div class="flex flex-row gap-5">
+    <app-input formControlName="title" label="Title"></app-input>
+  </div>
 </form>
-
-form values{{ form.value | json }} form errors{{ form.errors | json }}
