--- a/src/app/pages/quest/quest.component.html
+++ b/src/app/pages/quest/quest.component.html
@@ -1,4 +1,4 @@
-<div class="flex w-full min-h-screen py-5 px-3">
+<div class="flex w-full min-h-screen py-5 px-3 gap-5">
   <div class="flex flex-col gap-3 w-3/4">
     <app-quest-form />
   </div>
