--- a/src/app/features/quest/components/quest-form/quest-form.component.html
+++ b/src/app/features/quest/components/quest-form/quest-form.component.html
@@ -15,7 +15,7 @@
         *ngFor="let objective of objectives.controls; let i = index"
         class="p-3 flex justify-between items-center"
       >
-        <div [formGroupName]="i">
+        <div [formGroupName]="i" class="flex flex-row gap-3">
           <app-input
             formControlName="objectiveItemID"
             label="Item ID"
