Added textarea component Added designer comments textarea Added construction of designer comments Made objectives always return a list of strings

--- a/src/app/features/quest/components/quest-form/quest-form.component.html
+++ b/src/app/features/quest/components/quest-form/quest-form.component.html
@@ -20,13 +20,15 @@
             formControlName="objectiveItemID"
             label="Item ID"
             *ngIf="objective.get('objectiveItemID') !== null"
+            type="number"
           />
           <app-input
             formControlName="objectiveCreatureID"
             label="Creature ID"
             *ngIf="objective.get('objectiveCreatureID') !== null"
+            type="number"
           />
-          <app-input formControlName="count" label="Count" />
+          <app-input formControlName="count" label="Count" type="number" />
         </div>
         <button hlmBtn variant="destructive" (click)="removeObjective(i)">
           <hlm-icon size="sm" name="lucideTrash"></hlm-icon>
@@ -34,4 +36,13 @@
       </section>
     </div>
   </section>
+
+  <div class="mt-3 w-full">
+    <!-- <app-input formControlName="designerComments" label="Desginer Comments" /> -->
+    <app-textarea
+      formControlName="designerComments"
+      label="Designer Comments"
+      inputClass="w-full min-h-40 resize-none"
+    />
+  </div>
 </form>
