--- a/src/app/features/quest/components/quest-form/quest-form.component.html
+++ b/src/app/features/quest/components/quest-form/quest-form.component.html
@@ -1,15 +1,23 @@
 <form [formGroup]="form">
   <div class="flex flex-row gap-5">
     <app-input formControlName="title" label="Title"></app-input>
+    <app-input formControlName="moduleName" label="Module Name"></app-input>
   </div>
   <section hlmCard class="mt-3">
-    <div class="flex flex-row justify-between items-center" hlmCardHeader>
+    <div
+      class="flex flex-row justify-between items-center p-4 bg-stone-900 rounded-t-sm"
+      hlmCardHeader
+    >
       <h3 hlmCardTitle>Objectives</h3>
       <app-objective-dialog
         (addObjectiveEvent)="addObjective($event)"
       ></app-objective-dialog>
     </div>
-    <div formArrayName="objectives" hlmCardContent class="flex flex-col gap-3">
+    <div
+      formArrayName="objectives"
+      hlmCardContent
+      class="flex flex-col gap-3 py-3"
+    >
       <section
         hlmCard
         *ngFor="let objective of objectives.controls; let i = index"
