--- a/src/app/features/quest/components/quest-docs/quest-docs.component.html
+++ b/src/app/features/quest/components/quest-docs/quest-docs.component.html
@@ -3,7 +3,7 @@
     id="edit-profile"
     brnDialogTrigger
     hlmBtn
-    class="absolute right-2 bottom-2"
+    class="fixed right-2 bottom-2"
     variant="outline"
   >
     <hlm-icon size="base" name="lucideInfo"></hlm-icon>
