--- a/src/app/features/quest/components/quest-form/quest-form.component.html
+++ b/src/app/features/quest/components/quest-form/quest-form.component.html
@@ -3,6 +3,44 @@
     <app-input formControlName="title" label="Title"></app-input>
     <app-input formControlName="moduleName" label="Module Name"></app-input>
   </div>
+
+  <section hlmCard class="mt-3">
+    <div hlmCardHeader class="p-4 bg-stone-900 rounded-t-sm">
+      <h3 hlmCardTitle>Text Content</h3>
+    </div>
+    <div hlmCardContent class="py-3 grid grid-cols-2 grid-rows-6 gap-7">
+      <app-input
+        formControlName="objectiveText"
+        label="Objective"
+        class="col-span-2"
+        inputClass="w-full"
+      />
+      <app-textarea
+        formControlName="pickupText"
+        label="Description"
+        class="col-span-2 row-span-2"
+        inputClass="w-full h-3/4"
+        wrapperClass="w-full h-full"
+      />
+      <app-input
+        formControlName="incompleteText"
+        label="Incomplete"
+        inputClass="w-full"
+      />
+      <app-input
+        formControlName="completeText"
+        label="Complete"
+        inputClass="w-full"
+      />
+      <app-input
+        formControlName="completeLogText"
+        label="Quest Log (Complete)"
+        inputClass="w-full"
+        class="col-span-2"
+      />
+    </div>
+  </section>
+
   <section hlmCard class="mt-3">
     <div
       class="flex flex-row justify-between items-center p-4 bg-stone-900 rounded-t-sm"
