--- a/src/app/features/quest/components/quest-form/quest-form.component.html
+++ b/src/app/features/quest/components/quest-form/quest-form.component.html
@@ -114,6 +114,50 @@
     </div>
   </section>
 
+  <section hlmCard class="mt-3">
+    <div
+      class="flex flex-row justify-between items-center p-4 bg-stone-900 rounded-t-sm"
+      hlmCardHeader
+    >
+      <h3 hlmCardTitle>Quest Givers</h3>
+      <app-quest-giver-dialog (addQuestGiverEvent)="addQuestGiver($event)" />
+    </div>
+    <div
+      formArrayName="questGivers"
+      hlmCardContent
+      class="flex flex-col gap-3 py-3"
+    >
+      <section
+        hlmCard
+        *ngFor="let questGiver of questGivers.controls; let i = index"
+        class="p-3 flex justify-between items-center"
+      >
+        <div [formGroupName]="i" class="flex flex-row gap-3">
+          <app-input
+            formControlName="id"
+            [label]="
+              questGiver.get('entityType')?.value === 'creature'
+                ? 'Creature ID'
+                : 'Object ID'
+            "
+            type="number"
+          />
+          <label class="flex items-center" hlmLabel>
+            <hlm-switch class="mr-2" formControlName="starter" />
+            {{
+              questGiver.get("starter")?.value
+                ? "This is a Quest Starter"
+                : "This is a Quest Ender"
+            }}
+          </label>
+        </div>
+        <button hlmBtn variant="destructive" (click)="removeQuestGiver(i)">
+          <hlm-icon size="sm" name="lucideTrash"></hlm-icon>
+        </button>
+      </section>
+    </div>
+  </section>
+
   <div class="mt-3 w-full">
     <!-- <app-input formControlName="designerComments" label="Desginer Comments" /> -->
     <app-textarea
