--- a/src/app/features/quest/components/quest-form/quest-form.component.html
+++ b/src/app/features/quest/components/quest-form/quest-form.component.html
@@ -2,6 +2,12 @@
   <div class="flex flex-row gap-5">
     <app-input formControlName="title" label="Title"></app-input>
     <app-input formControlName="moduleName" label="Module Name"></app-input>
+    <app-select
+      controlName="faction"
+      [form]="form"
+      label="Faction"
+      [options]="factionOptions"
+    ></app-select>
   </div>
 
   <section hlmCard class="mt-3">
