Created custom combobox Added fuse.js for combobox Integrated combobox for areasort Added areasort json retrieval Added type for areasort Added code creation for areasort

--- a/src/app/features/quest/components/quest-form/quest-form.component.html
+++ b/src/app/features/quest/components/quest-form/quest-form.component.html
@@ -25,6 +25,11 @@
       label="Difficulty"
       [options]="difficultyOptions"
     ></app-select>
+    <app-combobox
+      [options]="areaOptions"
+      label="Area Sort"
+      [control]="form.controls['areaSort']"
+    />
   </div>
 
   <section hlmCard class="mt-3" formGroupName="flags">
