Added npc component

--- a/src/app/pages/npc/npc.component.html
+++ b/src/app/pages/npc/npc.component.html
@@ -1,1 +1,6 @@
-<p>npc works!</p>
+<div class="flex w-full min-h-screen py-5 px-3 gap-5">
+  <div class="flex flex-col gap-3 w-3/4">
+    <app-npc-form />
+  </div>
+  <app-npc-output class="w-1/4 h-fit" />
+</div>
