--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,6 +10,6 @@
   <div class="flex flex-row gap-3 items-center">
     <button hlmBtn variant="ghost" routerLink="quest">Quest</button>
     <button hlmBtn variant="ghost">Item</button>
-    <button hlmBtn variant="ghost">NPC</button>
+    <button hlmBtn variant="ghost" routerLink="npc">NPC</button>
   </div>
 </div>
