Added start item

--- a/src/app/features/quest/components/quest-form/single-quest-form/single-quest-form.component.html
+++ b/src/app/features/quest/components/quest-form/single-quest-form/single-quest-form.component.html
@@ -30,6 +30,7 @@
       label="Area Sort"
       [control]="form.controls['areaSort']"
     />
+    <app-input formControlName="startItem" label="Starting Item" />
   </div>
 
   <section hlmCard class="mt-3" formGroupName="flags">
