--- a/src/app/features/npc/components/npc-form/npc-form.component.html
+++ b/src/app/features/npc/components/npc-form/npc-form.component.html
@@ -184,4 +184,41 @@
       />
     </div>
   </section>
+
+  <section hlmCard class="mt-3">
+    <div
+      class="flex flex-row justify-between items-center p-4 bg-stone-900 rounded-t-sm"
+      hlmCardHeader
+    >
+      <h3 hlmCardTitle>Loot</h3>
+      <button hlmBtn (click)="addLoot()">
+        <hlm-icon size="sm" name="lucidePlus" />
+      </button>
+    </div>
+
+    <div formArrayName="loot" hlmCardContent class="flex flex-col gap-3 py-3">
+      <section
+        hlmCard
+        *ngFor="let item of loot.controls; let i = index"
+        class="p-3 flex justify-between items-center"
+      >
+        <div [formGroupName]="i" class="flex flex-row gap-3">
+          <app-input formControlName="itemID" label="Item ID" />
+          <app-input
+            formControlName="minDropAmount"
+            label="Minimum Drop Amount"
+            type="number"
+          />
+          <app-input
+            formControlName="maxDropAmount"
+            label="Maximum Drop Amount"
+            type="number"
+          />
+        </div>
+        <button hlmBtn variant="destructive" (click)="removeLoot(i)">
+          <hlm-icon size="sm" name="lucideTrash"></hlm-icon>
+        </button>
+      </section>
+    </div>
+  </section>
 </form>
